# macroc

./: .gitignore  CMakeLists.txt  README.md
doc/: manual.tex
include/: macroc.h
scripts/: RUN_SLURM.sh  launch_jobs.sh
scripts/plot/: gen_histo.sh  plot.gpl
scripts/scala/: RUN.sh  gen_inputs.sh
src/: assembly.c  bcs.c  forces.c  init.c  main.c  output.c  util.c
tests/: CMakeLists.txt  compare_test.sh  test_dm_1.c  test_dm_2.c
tests/test_develop/: RUN.sh  gen_inputs.sh
tests/test_stable/: RUN.sh
